[package]
name = "lp-modeler"
version = "0.3.0"
authors = ["Joel Cavat, Thomas Vincent"]
description = "A linear programming modeller written in Rust. This api helps to write LP model and use solver such as CBC, Gurobi, lp_solve, ..."
repository = "https://github.com/jcavat/rust-lp-modeler"
readme = "README.md"
license = "MIT"
keywords = ["linear-programming", "linear-models" ]

exclude = [
    "src/main.rs",
    "*.yml",
    "*.gitignore",
    "*.log",
    "*.iml",
    ".lp",
    "doc/*",
    "Cargo.lock",
]



[badges]
travis-ci = { repository = "jcavat/rust-lp-modeler" }
appveyor = { repository = "jcavat/rust-lp-modeler" }
