[package]
name = "lp-modeler"
version = "0.4.3"
authors = ["Joel Cavat <jcavat@gmail.com>"]
description = "A linear programming modeller written in Rust. This api helps to write LP model and use solver such as CBC, Gurobi, lp_solve, ..."
repository = "https://github.com/jcavat/rust-lp-modeler"
readme = "README.md"
license = "MIT"
keywords = ["linear-programming", "linear-models", "optimization", "solver", "formulation" ]
documentation = "https://jcavat.github.io/rust-lp-modeler"

exclude = [
    "src/main.rs",
    "*.yml",
    "*.gitignore",
    "*.log",
    "*.iml",
    ".lp",
    "doc/*",
    "Cargo.lock",
]


[badges]
travis-ci = { repository = "jcavat/rust-lp-modeler" }
appveyor = { repository = "jcavat/rust-lp-modeler" }

[dependencies]
uuid = { version = "0.7.4", features = ["v4"] }
quote = "1"
proc-macro2 = "1.0"